# audio2srtfile

./: .tool-versions  LICENSE  README.md  pyproject.toml
audio2srtfile/: cli.py
